fixing missing routes by adding them and adding the swagger comment above the function called by the routes
